generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL") 
}

model User {
  id            String         @id @default(uuid())
  username      String         @unique
  email         String         @unique
  passwordHash  String
  employee      Employee?
  roles         Role[]
  notifications Notification[]
  auditLogs     AuditLog[]
}

model Employee {
  id                  String               @id @default(uuid())
  fullName            String
  department          String
  status              String
  userId              String               @unique
  user                User                 @relation(fields: [userId], references: [id])
  managerId           String?
  manager             Employee?            @relation("ManagerSubordinate", fields: [managerId], references: [id])
  subordinates        Employee[]           @relation("ManagerSubordinate")
  jobTitleId          String?
  jobTitle            JobTitle?            @relation(fields: [jobTitleId], references: [id])
  leaveRequests       LeaveRequest[]
  payrollRecords      PayrollRecord[]
  onboardingChecklist OnboardingChecklist?
  documents           Document[]
  tickets             Ticket[]
}

model Role {
  id    String @id @default(uuid())
  name  String @unique
  users User[]
  tools Tool[]
}

model Tool {
  id       String @id @default(uuid())
  name     String
  category String
  roles    Role[]
}

model JobTitle {
  id        String     @id @default(uuid())
  title     String
  level     String
  employees Employee[]
}

model LeaveRequest {
  id         String   @id @default(uuid())
  startDate  DateTime
  endDate    DateTime
  status     String
  employeeId String
  employee   Employee @relation(fields: [employeeId], references: [id])
}

model PayrollRecord {
  id         String   @id @default(uuid())
  period     String
  netAmount  Decimal
  employeeId String
  employee   Employee @relation(fields: [employeeId], references: [id])
}

model OnboardingChecklist {
  id         String   @id @default(uuid())
  completed  Boolean  @default(false)
  employeeId String   @unique
  employee   Employee @relation(fields: [employeeId], references: [id])
}

model Notification {
  id      String @id @default(uuid())
  message String
  userId  String
  user    User   @relation(fields: [userId], references: [id])
}

model AuditLog {
  id        String   @id @default(uuid())
  action    String
  createdAt DateTime @default(now())
  userId    String
  user      User     @relation(fields: [userId], references: [id])
}

model Document {
  id         String   @id @default(uuid())
  title      String
  employeeId String
  employee   Employee @relation(fields: [employeeId], references: [id])
}

model Ticket {
  id         String   @id @default(uuid())
  title      String
  status     String
  priority   String
  employeeId String
  employee   Employee @relation(fields: [employeeId], references: [id])
}